# cortex-code-cli-slack-bridge

./: AGENTS.md  pyproject.toml
cortex_slack_bridge/: bridge.py  config.py  notify.py
plans/: plan_2026-04-27_0247.md
tests/: test_bridge.py  test_config.py  test_hooks.py  test_notify.py
